themes/uno-brewmaster/assets/css/uno.css
/* ... */
pre {
  margin-bottom: 1.3em;
  /*padding: 1em 2.5%;*/
  /*background: #e8f2fb;*/
  /*border: 1px solid #c9e1f6;*/
  border-radius: 3px;
  font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
  font-size: .9em;
  font-weight: normal;
  line-height: 1.3em; }
  pre code {
    padding: 0;
    background: none;
    border: none; }

.date,
.time,
.author,
.tags {
  font-size: .8em;
  color: #c7c7c7; }
  .date a,
  .time a,
  .author a,
  .tags a {
    color: #666666; }
    .date a:hover,
    .time a:hover,
    .author a:hover,
    .tags a:hover {
      color: #b9301c; }

.excerpt {
  margin: 0;
  font-size: .9em;
  color: #999999; }

.intro {
  font-family: "Roboto Slab", serif;
  font-size: 1.2em;
  font-weight: lighter;
  color: #999999; }

.block-heading {
  display: inline;
  float: left;
  width: 940px;
  margin: 0 10px;
  position: relative;
  bottom: -15px;
  font-size: .8em;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px; }

.label {
  position: relative;
  display: inline-block;
  padding: 8px 18px 9px 18px;
  background: #e25440;
  border-radius: 3px;
  text-align: center;
  color: #FFF; }

.container {
  position: relative;
  z-index: 500;
  width: 940px;
  margin: 0 auto; }

.content-wrapper {
  z-index: 800;
  width: 60%;
  max-width: 800px;
  margin-left: 40%; }

.content-wrapper__inner {
  margin: 0 10%;
  padding: 50px 0; }

.footer {
  display: block;
  padding: 2em 0 0 0;
  border-top: 2px solid #dddddd;
  font-size: .7em;
  color: #b3b3b3; }

.footer__copyright {
  display: block;
  margin-bottom: .7em; }
  .footer__copyright a {
    color: #a6a6a6;
    text-decoration: underline; }
    .footer__copyright a:hover {
      color: #b9301c; }

.avatar {
  border-radius: 50%;
  border: 3px solid #FFF;
  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3); }

hr {
  border: none; }

.section-title__divider {
  width: 30%;
  margin: 2.2em 0 2.1em 0;
  border-top: 1px solid #dddddd; }

.hidden {
  display: none !important; }

.post-comments {
  border-top: 1px solid #dddddd;
  padding: 60px 0; }

.post-meta {
  margin: 0 0 .4em 0;
  color: #c7c7c7; }

.post-meta__date {
  margin-right: .5em; }

.post-meta__tags {
  margin-left: .4em; }

.post-meta__author {
  margin-left: 1.5em; }

.post-meta__avatar {
  display: inline-block;
  width: 22px;
  height: 22px;
  margin: 0 .3em -.4em 0;
  border: none;
  box-shadow: none; }

.post img {
  max-width: 100%;
  margin: 0 auto;
  border-radius: 3px;
  text-align: center; }
.post pre {
  width: 95%; overflow-x: auto;}
.post hr {
  display: block;
  width: 30%;
  margin: 2em 0;
  border-top: 1px solid #dddddd; }
.post .ulist {
  overflow-x: auto;
}

.error-code {
  font-size: 6em; }

.panel {
  display: table;
  width: 100%;
  height: 100%; }

.panel__vertical {
  display: table-cell;
  vertical-align: middle; }

.panel-title {
  margin: 0 0 5px 0;
  font-size: 2.0em;
  letter-spacing: 4px;
  color: #FFF; }

.panel-title a {
  font-weight: 700; }

.panel-subtitle {
  font-family: "Roboto Slab", serif;
  font-size: 1.2em;
  font-weight: lighter;
  letter-spacing: 3px;
  color: #cccccc;
  -webkit-font-smoothing: antialiased; }

.panel-cover {
  display: block;
  position: fixed;
  z-index: 900;
  width: 100%;
  max-width: none;
  height: 100%;
  background: url(../images/background-cover.jpg) top left no-repeat #666666;
  background-size: cover; }

.panel-cover--collapsed {
  width: 40%;
  max-width: 530px; }

.panel-cover--overlay {
  display: block;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(68, 68, 68, 0.6);
  background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9));
  background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9)); }

.panel-cover__logo {
  margin-bottom: .2em;
  width: 540px; }
.panel-cover.panel-cover--collapsed .panel-cover__logo {
  width: 260px; }

.panel-cover__description {
  margin: 0 30px; }

.panel-cover__divider {
  width: 50%;
  margin: 20px auto;
  border-top: 1px solid rgba(255, 255, 255, 0.14); }

.panel-cover__divider--secondary {
  width: 15%; }

.panel-main {
  display: table;
  width: 100%;
  height: 100%; }

.no-js .panel-main {
  width: 40%;
  max-width: 530px; }

.panel-main__inner {
  display: table-cell;
  vertical-align: middle;
  position: relative;
  z-index: 800;
  padding: 0 60px; }

.panel-main__content {
  max-width: 620px;
  margin: 0 auto; }

.panel-main__content--fixed {
  width: 480px;
  transition: width 1s;
  -webkit-transition: width 1s;
  /* Safari */ }

.panel-inverted {
  font-weight: 100;
  text-align: center;
  color: #FFF;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4); }
  .panel-inverted a {
    color: #FFF; }

.cover-navigation {
  margin-top: 10px; }

.cover-navigation--social {
  margin-left: 30px; }

.cover-green {
  background-color: rgba(21, 111, 120, 0.6);
  background-image: -webkit-linear-gradient(-410deg, rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8));
  background-image: linear-gradient(140deg,rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8)); }

.cover-purple {
  background-color: rgba(73, 50, 82, 0.6);
  background-image: -webkit-linear-gradient(-410deg, rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8));
  background-image: linear-gradient(140deg,rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8)); }

.cover-red {
  background-color: rgba(119, 31, 18, 0.6);
  background-image: -webkit-linear-gradient(-410deg, rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8));
  background-image: linear-gradient(140deg,rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8)); }

.cover-slate {
  background-color: rgba(61, 66, 96, 0.6);
  background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
  background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8)); }
/* ... */

